--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
+  },
+  "dependencies": {
+    "@viz-js/viz": "^3.4.0"
   }
 }
