--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/mime": "^4.0.0",
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
+    "mime": "^4.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.2.5",
     "typescript": "^5.2.2",
