--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -20,5 +20,5 @@
     "noFallthroughCasesInSwitch": true,
     "moduleDetection": "force",
   },
-  "include": ["engine", "game"],
+  "include": ["engine", "game", "."],
 }
