--- a/.github/workflows/deploy_to_gh_pages.yml
+++ b/.github/workflows/deploy_to_gh_pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build
         run: |
           npm i
-          npm run build
+          npm run build -- --base /diventure/
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
